# image-artisan-xl

./: .gitignore  .pylintrc  CHANGELOG.MD  EXPLANATIONS.MD  LICENSE  README.md  index.html  pyproject.toml
configs/: download_list.json  scheduler_config.json  sd_xl_base.yaml
configs/CLIP-ViT-bigG-14-laion2B-39B-b160k/: README.md
css/: styles.css
src/iartisanxl/: __main__.py
src/iartisanxl/annotators/: utils.py
src/iartisanxl/app/: artisan.py  directories.py  download_item.py  downloader_dialog.py  event_bus.py  logging_conf.py  main_window.py  modules.py  preferences.py  title_bar.py
src/iartisanxl/buttons/: base_menu_button.py  brush_erase_button.py  color_button.py  expand_button.py  expand_contract_button.py  expand_right_button.py  eyedropper_button.py  hamburguer_button.py  menu_button.py  remove_button.py  toggle_button.py  transparent_button.py  vertical_button.py  vertical_label.py
src/iartisanxl/configuration/: base_setup_panel.py  control_adapters_panel.py  directories_panel.py  initial_setup_dialog.py  optimizations_panel.py  preferences_dialog.py  utilities_panel.py  welcome_panel.py
src/iartisanxl/console/: console_stream.py
src/iartisanxl/convert_model/: convert_functions.py
src/iartisanxl/diffusers/: unet.py
src/iartisanxl/diffusers_patch/: ip_adapter_attention_processor.py
src/iartisanxl/formats/: image.py
src/iartisanxl/generation/: adapter_list.py  controlnet_data_object.py  controlnet_list.py  generation_data_object.py  image_generation_data.py  ip_adapter_data_object.py  lora_data_object.py  lora_list.py  model_data_object.py  t2i_adapter_data_object.py  t2i_adapter_list.py  vae_data_object.py
src/iartisanxl/graph/: iartisan_node_error.py  iartisanxl_node_graph.py
src/iartisanxl/layouts/: aspect_ratio_layout.py  flow_layout.py  simple_flow_layout.py
src/iartisanxl/menu/: left_menu.py  right_menu.py
src/iartisanxl/modules/: base_module.py
src/iartisanxl/nodes/: encode_prompts_node.py  image_generation_node.py  image_save_node.py  image_send_node.py  latents_decoder_node.py  latents_node.py  lora_node.py  node.py  number_node.py  prompts_encoder_node.py  prompts_node.py  scheduler_node.py  stable_difussion_xl_model_node.py  stable_difussion_xl_node.py  text_node.py  vae_model_node.py
src/iartisanxl/pipelines/: controlnet_txt_pipeline.py  convert_pipeline.py  iartisanxl_node_graph.py  iartisanxl_pipeline.py  prompt_utils.py  txt_pipeline.py
src/iartisanxl/taesd/: taesd.py
tests/app/: test_main_window.py  test_main_window_gui.py
tests/generation/: test_generation_data_object.py  test_image_generation_data.py  test_lora_data_object.py  test_lora_list.py  test_model_data_obect.py  test_vae_data_object.py
tests/graph/: test_iartisanxl_node_graph.py
(+193 files in other folders)
