[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iartisanxl"
version = "0.1.1"
authors = [
  { name="Alvaro Somoza", email="somoza.alvaro@gmail.com" },
]
description = "Dekstop application for generating images using Stable Diffusion."
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.24.1 ",
    "diffusers>=0.23.0",
    "Pillow>=9.3.0",
    "PyQt6>=6.6.0",
    "pyqtgraph",
    "safetensors",
    "scipy",
    "torchsde",
    "transformers>=4.35.0",
    "toml",
    "tomesd",
    "attrs",
    "omegaconf",
    "peft>=0.6.0",
    "opencv-python>=4.8.1.78",
    "matplotlib",
    "scikit-image",
    "superqt>=0.6.1",
    "vcolorpicker>=1.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "build",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iartisanxl = ["theme/stylesheet.qss", "theme/icons/*.*", "theme/images/*.*", "theme/cursors/*.svg"]

[project.gui-scripts]
iartisanxl = "iartisanxl.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning:torchvision.transforms._functional_pil",
]