[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iartisanxl"
version = "0.3.0"
authors = [
  { name="Alvaro Somoza", email="somoza.alvaro@gmail.com" },
]
description = "Dekstop application for generating images using Stable Diffusion."
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.25.0 ",
    "diffusers>=0.25.0.dev0",
    "Pillow>=9.3.0",
    "PyQt6>=6.6.0",
    "pyqtgraph",
    "safetensors",
    "scipy",
    "torchsde",
    "transformers>=4.36.2",
    "toml",
    "tomesd",
    "attrs",
    "omegaconf",
    "peft>=0.7.0",
    "opencv-python>=4.8.1.78",
    "matplotlib",
    "scikit-image",
    "superqt>=0.6.1",
    "vcolorpicker>=1.4.3",
    "einops>=0.7.0",
    "timm==0.9.5",
    "bitsandbytes==0.41.1",
    "prodigyopt==1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "build",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iartisanxl = ["theme/stylesheet.qss", "theme/icons/*.*", "theme/images/*.*", "theme/cursors/*.svg"]

[tool.black]
line-length = 155

[project.gui-scripts]
iartisanxl = "iartisanxl.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning:torchvision.transforms._functional_pil",
]